--- a/css/paint.css
+++ b/css/paint.css
@@ -4,7 +4,7 @@
 .paint {
     display: flex;
     font-family: 'PT Sans', sans-serif;
-    background-image: url(./images/background.jpg);
+    background-image: url(../images/background.jpg);
     background-size: cover;
     height: 100vh;
     width: 100vw;
